--- a/force-app/main/default/lwc/addTowel/addTowel.html
+++ b/force-app/main/default/lwc/addTowel/addTowel.html
@@ -20,10 +20,10 @@
                         <tbody>
                             <template for:each={towels} for:item="towel" for:index="index">
                                 <tr key={towel.id} >
-                                    <td class="slds-text-align_center"><lightning-combobox value={towel.Particulars} options={ParticularsList} onchange={handleChange} data-key={index} data-fields="Particulars"></lightning-combobox></td>
-                                    <td class="slds-text-align_center"><lightning-input type="number" value={towel.Quantity} onchange={handleChange} data-key={index} data-fields="Quantity"></lightning-input></td>
-                                    <td class="slds-text-align_center"><lightning-input type="float" value={towel.Weight} onchange={handleChange} data-key={index} data-fields="Weight"></lightning-input></td>
-                                    <td class="slds-text-align_center"><lightning-button-icon icon-name="utility:delete" alternative-text="Delete row" onclick={deleteTowel} data-key={index}></lightning-button-icon></td>
+                                    <td class="slds-text-align_center"><lightning-combobox value={towel.Particulars__c} options={ParticularsList} onchange={handleChange} data-key={index} data-fields="Particulars__c" ></lightning-combobox></td>
+                                    <td class="slds-text-align_center"><lightning-input type="number" value={towel.Quantity__c} onchange={handleChange} data-key={index}  data-fields="Quantity__c"></lightning-input></td>
+                                    <td class="slds-text-align_center"><lightning-input type="float" value={towel.TowelWeight__c} onchange={handleChange} data-key={index}  data-fields="TowelWeight__c"></lightning-input></td>
+                                    <td class="slds-text-align_center"><lightning-button-icon icon-name="utility:delete" alternative-text="Delete row"  onclick={deleteTowel} data-key={index}></lightning-button-icon></td>
                                 </tr>
                             </template>
                         </tbody>
