--- a/force-app/main/default/lwc/addTowel/addTowel.html
+++ b/force-app/main/default/lwc/addTowel/addTowel.html
@@ -1,17 +1,10 @@
 <template>
-    <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
-        aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open slds-modal_medium slds-modal_small">
-        <div class="slds-modal__container">
-            <header class="slds-modal__header">
-                <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Enter Towel Details</h2>
-                <button class="slds-button slds-button_icon slds-modal__close" title="Close" onclick={handleCancel}>
-                    <lightning-icon icon-name="utility:close" size="small"></lightning-icon>
-                    <span class="slds-assistive-text">Close</span>
-                </button>
-            </header>
-            <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-                <lightning-card  >
-                    <div style="max-height: 250px; overflow-y: auto; border-radius: 0.25rem; border: 1px solid #d8dde6;">
+    <lightning-modal-header label="Enter Towel Details">
+    </lightning-modal-header>
+    <lightning-modal-body>
+        <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
+            <lightning-card  >
+                <div style="max-height: 250px; overflow-y: auto; border-radius: 0.25rem; border: 1px solid #d8dde6;">
                     <table class="slds-table slds-table_bordered slds-table_cell-buffer slds-table_striped " >
                         <thead>
                             <tr>
@@ -24,22 +17,20 @@
                         <tbody>
                             <template for:each={towels} for:item="towel" for:index="index">
                                 <tr key={towel.id} >
-                                    <td><lightning-combobox value={towel.Particulars__c} options={ParticularsList} onchange={handleChange} required data-key={index} data-fields="Particulars__c" ></lightning-combobox></td>
-                                    <td><lightning-input type="number" value={towel.Quantity__c} onchange={handleChange} data-key={index} required data-fields="Quantity__c"></lightning-input></td>
-                                    <td><lightning-input type="float" value={towel.TowelWeight__c} onchange={handleChange} data-key={index} required data-fields="TowelWeight__c"></lightning-input></td>
+                                    <td><lightning-combobox value={towel.Particulars} options={ParticularsList} onchange={handleChange} required data-key={index} data-fields="Particulars" ></lightning-combobox></td>
+                                    <td><lightning-input type="number" value={towel.Quantity} onchange={handleChange} data-key={index} required data-fields="Quantity"></lightning-input></td>
+                                    <td><lightning-input type="number" value={towel.TowelWeight} onchange={handleChange} data-key={index} required data-fields="TowelWeight"></lightning-input></td>
                                     <td><lightning-button-icon if:true={isOnlyoneRowAvailable} icon-name="utility:delete" alternative-text="Delete row"  onclick={deleteTowel} data-key={index}></lightning-button-icon></td>
                                 </tr>
                             </template>
                         </tbody>
                     </table>
-                    </div>
-                </lightning-card>
-                <lightning-button label="Add Row" onclick={addRow} style="padding-top: 10px;" ></lightning-button>
-            </div>
-            <footer class="slds-modal__footer">
-                    <lightning-button label="Submit" style="padding: 10px;"  onclick={handleSubmit}></lightning-button>         
-            </footer>
+                </div>
+            </lightning-card>
+            <lightning-button label="Add Row" onclick={addRow} style="padding-top: 10px;" ></lightning-button>
         </div>
-    </section>
-    <div class="slds-backdrop slds-backdrop_open"></div>
+    </lightning-modal-body>
+    <lightning-modal-footer>
+        <lightning-button label="Submit" style="padding: 10px;"  onclick={handleSubmit}></lightning-button>         
+    </lightning-modal-footer>
 </template>
