--- a/force-app/main/default/lwc/weaverDetails/weaverDetails.html
+++ b/force-app/main/default/lwc/weaverDetails/weaverDetails.html
@@ -30,7 +30,7 @@
                             
                             <!--If there is  records in Black the below content is displayed-->
                             <div if:true={BlackWtDetails}>
-                                <c-weaver-wt-details wtdetails={BlackWtDetails} account={accountData} type="Black"></c-weaver-wt-details>
+                                <c-weaver-wt-details wtdetails={BlackWtDetails} record-id={recordId} type="Black"></c-weaver-wt-details>
                             </div>
                             <!--If there is no records in Black the below content is displayed-->
                             <template if:false={BlackWtDetails}>
@@ -48,7 +48,7 @@
                             
                             <!--If there is  records in 6666 the below content is displayed-->
                             <div if:true={WtDetails6666}>
-                                <c-weaver-wt-details wtdetails={BlackWtDetails} account={accountData} type="6666"></c-weaver-wt-details>
+                                <c-weaver-wt-details wtdetails={WtDetails6666} record-id={recordId} type="6666"></c-weaver-wt-details>
                             </div>
                             <!--If there is no records in 6666 the below content is displayed-->
                             <template if:false={WtDetails6666}>
