--- a/force-app/main/default/lwc/addRawMaterial/addRawMaterial.html
+++ b/force-app/main/default/lwc/addRawMaterial/addRawMaterial.html
@@ -16,7 +16,7 @@
                     <tbody>
                         <template for:each={rawmaterials} for:item="rawmaterial" for:index="index">
                             <tr key={rawmaterial.id} >
-                                <td><lightning-combobox value={rawmaterial.RawMaterial} options={RawMaterialsList} onchange={handleChangeRawMat} required data-key={index} data-field1="RawMaterial" data-field2="SelectedRawMatWtAvailable" ></lightning-combobox>
+                                <td><lightning-combobox value={rawmaterial.RawMaterial} options={rawmaterialslist} onchange={handleChangeRawMat} required data-key={index} data-field1="RawMaterial" data-field2="SelectedRawMatWtAvailable" data-field3="RawMatId" ></lightning-combobox>
                                 <div>Availabe Weight : {rawmaterial.SelectedRawMatWtAvailable} Kg's</div></td>
                                 <td><lightning-input type="number" value={rawmaterial.RawMaterialWeight} onchange={handleChange} data-key={index} required data-fields="RawMaterialWeight"></lightning-input></td>
                                 <td><lightning-button-icon if:true={isOnlyoneRowAvailable} icon-name="utility:delete" alternative-text="Delete row"  onclick={deleteRawMaterial} data-key={index}></lightning-button-icon></td>
