--- a/force-app/main/default/lwc/amountPay/amountPay.html
+++ b/force-app/main/default/lwc/amountPay/amountPay.html
@@ -15,7 +15,7 @@
           type="number"
           label="Amount"
           required
-          onchange={handleAmtchange}
+          onblur={handleAmtchange}
           class="slds-p-around_small"
         ></lightning-input>
     </lightning-modal-body>
