--- a/force-app/main/default/lwc/addRawMaterial/addRawMaterial.html
+++ b/force-app/main/default/lwc/addRawMaterial/addRawMaterial.html
@@ -4,21 +4,21 @@
     <lightning-modal-body>
         <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
             <lightning-card  >
-                <div style="max-height: 250px; overflow-y: auto; border-radius: 0.25rem; border: 1px solid #d8dde6;">
+                <div class="container">
                 <table class="slds-table slds-table_bordered slds-table_cell-buffer slds-table_striped " >
                     <thead>
                         <tr>
                             <th>RawMaterial</th>
                             <th>Weight</th>
-                            <th></th>
+                            <th><lightning-button-icon icon-name="utility:add" title="Add Row" onclick={addRow} class="slds-m-left_xx-small"></lightning-button-icon></th>
                         </tr>
                     </thead>
                     <tbody>
                         <template for:each={rawmaterials} for:item="rawmaterial" for:index="index">
                             <tr key={rawmaterial.id} >
-                                <td><lightning-combobox value={rawmaterial.RawMaterial} options={rawmaterialslist} onchange={handleChangeRawMat} required data-key={index} data-field1="RawMaterial" data-field2="SelectedRawMatWtAvailable" data-field3="RawMatId" ></lightning-combobox>
+                                <td><lightning-combobox variant="label-hidden" value={rawmaterial.RawMaterial} options={rawmaterialslist} onblur={handleChangeRawMat} required data-key={index} data-field1="RawMaterial" data-field2="SelectedRawMatWtAvailable" data-field3="RawMatId" ></lightning-combobox>
                                 <div>Availabe Weight : {rawmaterial.SelectedRawMatWtAvailable} Kg's</div></td>
-                                <td><lightning-input type="number" value={rawmaterial.RawMaterialWeight} onchange={handleChange} data-key={index} required data-fields="RawMaterialWeight"></lightning-input></td>
+                                <td><lightning-input variant="label-hidden" type="number" value={rawmaterial.RawMaterialWeight} onblur={handleChange} data-key={index} required data-fields="RawMaterialWeight"></lightning-input></td>
                                 <td><lightning-button-icon if:true={isOnlyoneRowAvailable} icon-name="utility:delete" alternative-text="Delete row"  onclick={deleteRawMaterial} data-key={index}></lightning-button-icon></td>
                             </tr>
                         </template>
@@ -26,7 +26,6 @@
                 </table>
                 </div>
             </lightning-card>
-            <lightning-button label="Add Row" onclick={addRow} style="padding-top: 10px;" ></lightning-button>
         </div>
     </lightning-modal-body>
     <lightning-modal-footer>
