--- a/force-app/main/default/lwc/addTowel/addTowel.html
+++ b/force-app/main/default/lwc/addTowel/addTowel.html
@@ -4,30 +4,29 @@
     <lightning-modal-body>
         <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
             <lightning-card  >
-                <div style="max-height: 250px; overflow-y: auto; border-radius: 0.25rem; border: 1px solid #d8dde6;">
+                <div class="container">
                     <table class="slds-table slds-table_bordered slds-table_cell-buffer slds-table_striped " >
                         <thead>
                             <tr>
                                 <th>Particulars</th>
                                 <th>Quantity</th>
                                 <th>Weight</th>
-                                <th></th>
+                                <th><lightning-button-icon icon-name="utility:add" title="Add Row" onclick={addRow} class="slds-m-left_xx-small"></lightning-button-icon></th>
                             </tr>
                         </thead>
                         <tbody>
                             <template for:each={towels} for:item="towel" for:index="index">
                                 <tr key={towel.id} >
-                                    <td><lightning-combobox value={towel.Particulars} options={towparticularslist} onchange={handleChange} required data-key={index} data-fields="Particulars" ></lightning-combobox></td>
-                                    <td><lightning-input type="number" value={towel.Quantity} onchange={handleChange} data-key={index} required data-fields="Quantity"></lightning-input></td>
-                                    <td><lightning-input type="number" value={towel.TowelWeight} onchange={handleChange} data-key={index} required data-fields="TowelWeight"></lightning-input></td>
-                                    <td><lightning-button-icon if:true={isOnlyoneRowAvailable} icon-name="utility:delete" alternative-text="Delete row"  onclick={deleteTowel} data-key={index}></lightning-button-icon></td>
+                                    <td><lightning-combobox variant="label-hidden" value={towel.Particulars} options={towparticularslist} onblur={handleChange} required data-key={index} data-fields="Particulars" ></lightning-combobox></td>
+                                    <td><lightning-input variant="label-hidden" type="number" value={towel.Quantity} onblur={handleChange} data-key={index} required data-fields="Quantity"></lightning-input></td>
+                                    <td><lightning-input variant="label-hidden" type="number" value={towel.TowelWeight} onblur={handleChange} data-key={index} required data-fields="TowelWeight"></lightning-input></td>
+                                    <td><lightning-button-icon if:true={isOnlyoneRowAvailable} icon-name="utility:delete" alternative-text="Delete row" class="slds-m-left_xx-small" onclick={deleteTowel} data-key={index}></lightning-button-icon></td>
                                 </tr>
                             </template>
                         </tbody>
                     </table>
                 </div>
             </lightning-card>
-            <lightning-button label="Add Row" onclick={addRow} style="padding-top: 10px;" ></lightning-button>
         </div>
     </lightning-modal-body>
     <lightning-modal-footer>
