--- a/force-app/main/default/lwc/weaverDetails/weaverDetails.html
+++ b/force-app/main/default/lwc/weaverDetails/weaverDetails.html
@@ -11,7 +11,7 @@
                         <lightning-tab label="Normal" >
                             <!--If there is  records in Normal the below content is displayed-->
                             <div if:true={NormalWtDetails}>
-                                <c-weaver-wt-details -significant-wage-bal = {SignificantWageBal} -total-balance-wage={TotalBalanceWage} wtdetails={NormalWtDetails} record-id={recordId} onupdsignbal = {HandleSignificantAmtBalUpdate} type="Normal"></c-weaver-wt-details>
+                                <c-weaver-wt-details onrefresh={handlerefresh} -significant-wage-bal = {SignificantWageBal} -total-balance-wage={TotalBalanceWage} wtdetails={NormalWtDetails} record-id={recordId} onupdbal = {HandleAmtBalUpdate} type="Normal"></c-weaver-wt-details>
                             </div>
                             <!--If there is no records in Normal the below content is displayed-->
                             <template if:false={NormalWtDetails}>
@@ -30,7 +30,7 @@
                             
                             <!--If there is  records in Black the below content is displayed-->
                             <div if:true={BlackWtDetails}>
-                                <c-weaver-wt-details -significant-wage-bal = {SignificantWageBal} -total-balance-wage={TotalBalanceWage} wtdetails={BlackWtDetails} record-id={recordId} type="Black"></c-weaver-wt-details>
+                                <c-weaver-wt-details -significant-wage-bal = {SignificantWageBal} -total-balance-wage={TotalBalanceWage} wtdetails={BlackWtDetails} record-id={recordId} onupdbal = {HandleAmtBalUpdate} type="Black"></c-weaver-wt-details>
                             </div>
                             <!--If there is no records in Black the below content is displayed-->
                             <template if:false={BlackWtDetails}>
@@ -48,7 +48,7 @@
                             
                             <!--If there is  records in 6666 the below content is displayed-->
                             <div if:true={WtDetails6666}>
-                                <c-weaver-wt-details -significant-wage-bal = {SignificantWageBal} -total-balance-wage={TotalBalanceWage} wtdetails={WtDetails6666} record-id={recordId} type="6666"></c-weaver-wt-details>
+                                <c-weaver-wt-details -significant-wage-bal = {SignificantWageBal} -total-balance-wage={TotalBalanceWage} wtdetails={WtDetails6666} record-id={recordId} onupdbal = {HandleAmtBalUpdate} type="6666"></c-weaver-wt-details>
                             </div>
                             <!--If there is no records in 6666 the below content is displayed-->
                             <template if:false={WtDetails6666}>
