--- a/force-app/main/default/lwc/uncalculatedWageDetails/uncalculatedWageDetails.html
+++ b/force-app/main/default/lwc/uncalculatedWageDetails/uncalculatedWageDetails.html
@@ -2,7 +2,7 @@
     <div class="slds-box slds-text-align_center slds-m-around_small" style="font-weight: bold" >
         <h3>Total Wage Balance {TotalBalanceWage}</h3>
     </div>
-    <div class="slds-tabs_scoped__content " style="border: 1px solid #d8dde6;border-radius: 0.25rem;max-height: 300px;overflow-y: auto;">
+    <div if:true={wagedetails} class="slds-tabs_scoped__content " style="border: 1px solid #d8dde6;border-radius: 0.25rem;max-height: 300px;overflow-y: auto;">
         <template  for:each={wagedetails} for:item="WageDetail">
             <lightning-card class="" key={WageDetail.Id} title={WageDetail.Date__c}>   
                 <table class="slds-table slds-table_cell-buffer  slds-table_bordered slds-scrollable slds-table_col-bordered slds-scrollable_x" style="min-width: 100px;">
@@ -59,9 +59,12 @@
             </lightning-card>
         </template>
     </div>
+    <div if:false={wagedetails} class="slds-align_absolute-center slds-tabs_scoped__content " style="border: 1px solid #d8dde6;border-radius: 0.25rem;height: 300px;overflow-y: auto;">
+        <div class="slds-align_absolute-center">No Records</div>
+    </div>
     <lightning-button-group class="slds-align_absolute-center">
         <lightning-button class="slds-m-around_medium "  label="Pay Wage-ExtAmt" disabled={isExtraAmtlimitReached} onclick={handleClickExtAmtWagePay}  variant="brand" style="padding: 10px; border-radius: 2%;"></lightning-button>
-        <lightning-button class="slds-m-around_medium "  label="Calculate Salary" onclick={handleCalculateSalary}  variant="brand" style="padding: 10px; border-radius: 2%;"></lightning-button>
+        <lightning-button class="slds-m-around_medium "  label="Calculate Salary" disabled={isCalculatewage} onclick={handleCalculateSalary}  variant="brand" style="padding: 10px; border-radius: 2%;"></lightning-button>
     </lightning-button-group>
         <section if:true={IsUndopopover} aria-describedby="dialog-body-id-112" aria-labelledby="dialog-heading-id-117" class="slds-popover slds-nubbib_left slds-popover_full-width" role="dialog" style="margin: 15px; background-color:rgb(33, 240, 85) ">
             <div class="slds-popover__header ">Amount is being Updated!    <lightning-button label="Undo" onclick={triggerCancelAmountRecCreation}></lightning-button></div>
