--- a/force-app/main/default/lwc/weaverWtDetails/weaverWtDetails.html
+++ b/force-app/main/default/lwc/weaverWtDetails/weaverWtDetails.html
@@ -4,7 +4,7 @@
             <!--For Each Parent Record A Card is created and details are displayed-->
             <lightning-card class="" key={WtDetail.Id} title={WtDetail.Date__c}>
                 
-                <table class="slds-table slds-table_cell-buffer slds-no-row-hover " >
+                <table class="slds-table slds-table_cell-buffer slds-no-row-hover " border="1.0">
                     <thead>
                         <tr class="slds-line-height_reset">
                             <th scope="col">
